--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.3.3",
     "chart.js": "^3.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
